--- a/seqware-webservice/pom.xml
+++ b/seqware-webservice/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>com.github.seqware</groupId>
         <artifactId>seqware</artifactId>
-        <version>1.1.1</version>
+        <version>1.1.1-gsi-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
