Addition of LimsKey entity to record the state of a LIMS object located in a remote system
- includes entity, DAO, DTO, service, and end point
- links to the existing seqware db schema through IUS (lims_key_id)

--- a/seqware-webservice/pom.xml
+++ b/seqware-webservice/pom.xml
@@ -637,6 +637,10 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+        </dependency>
     </dependencies>
 
     <profiles>
