--- a/seqware-common/src/test/resources/log4j.properties
+++ b/seqware-common/src/test/resources/log4j.properties
@@ -1,11 +1,17 @@
-log4j.rootLogger=WARN, R
+log4j.rootLogger=WARN, consoleAppender
 
-log4j.appender.R=org.apache.log4j.RollingFileAppender
-log4j.appender.R.File=dao-test.log
+#log4j.appender.R=org.apache.log4j.RollingFileAppender
+#log4j.appender.R.File=dao-test.log
+#log4j.appender.R.MaxFileSize=100KB
+## Keep one backup file
+#log4j.appender.R.MaxBackupIndex=1
+#log4j.appender.R.layout=org.apache.log4j.PatternLayout
+#log4j.appender.R.layout.ConversionPattern=%p %t %c - %m%n
 
-log4j.appender.R.MaxFileSize=100KB
-# Keep one backup file
-log4j.appender.R.MaxBackupIndex=1
 
-log4j.appender.R.layout=org.apache.log4j.PatternLayout
-log4j.appender.R.layout.ConversionPattern=%p %t %c - %m%n
+# consoleAppender goes to the console.
+log4j.appender.consoleAppender=org.apache.log4j.ConsoleAppender
+log4j.appender.consoleAppender.layout=org.apache.log4j.PatternLayout
+log4j.appender.consoleAppender.layout.ConversionPattern=%p [%d{yyyy/MM/dd HH:mm:ss}] | %m%n
+
+log4j.org.hibernate.tool.hbm2ddl=DEBUG
