--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,28 @@
             </snapshots>
         </repository>
         <repository>
+            <id>dependencies.gsi</id>
+            <name>GSI Dependencies Maven Snapshot Repository</name>
+            <url>http://seqwaremaven.oicr.on.ca/artifactory/gsi-dependencies</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>snapshots.gsi</id>
+            <name>GSI Snapshots Maven Snapshot Repository</name>
+            <url>http://seqwaremaven.oicr.on.ca/artifactory/gsi-snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository> 
+        <repository>
             <id>dependencies.seqware.sourceforge.net</id>
             <name>SeqWare Dependencies Maven Repository</name>
             <url>http://seqwaremaven.oicr.on.ca/artifactory/seqware-dependencies</url>
