New tool that relinks workflow runs and processings to a new IUS-LimsKey
- New seqware-admin-tools project to separate admin tools from
pipeline/user tools

--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,7 @@
         <module>seqware-distribution</module>
         <module>seqware-ext-testing</module>
         <module>seqware-sanity-check</module>
+        <module>seqware-admin-tools</module>
     </modules>
 
 
