Update gitignore for netbeans related files

--- a/.gitignore
+++ b/.gitignore
@@ -56,15 +56,11 @@ seqware-vagrant/.vagrant
 seqware-vagrant/vagrant_launch.conf
 seqware-vagrant/vagrant_cluster_launch.json
 
-# netbeans settings
-*/nbactions.xml
-*/nb-configuration.xml
+# Netbeans
+nbactions*.xml
+nb-configuration*.xml
+nbproject/
 
 # python cache
 scripts/deciders/__pycache__
-
-# Netbeans configuration
-nbactions.xml
-nb-configuration.xml
-nbproject/
 
