--- a/seqware-common/pom.xml
+++ b/seqware-common/pom.xml
@@ -488,5 +488,10 @@
             <artifactId>provenance-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.1</version>
+        </dependency>
     </dependencies>
 </project>
