Support to update and delete (orphaned) IUS and LimsKey entities

--- a/seqware-webservice/src/main/resources/log4j.properties
+++ b/seqware-webservice/src/main/resources/log4j.properties
@@ -28,3 +28,5 @@ log4j.logger.net.sf.ehcache=WARN
 # Log JDBC bind parameter runtime arguments
 #log4j.logger.org.hibernate.type=WARN
 # END log4j Logging configuration.
+
+#log4j.logger.net.sourceforge.seqware.webservice.resources.queries=INFO
