--- a/seqware-common/pom.xml
+++ b/seqware-common/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
 
     <parent>
-        <version>1.1.1-gsi-SNAPSHOT</version>
+        <version>1.1.1-gsi-rc1</version>
         <groupId>com.github.seqware</groupId>
         <artifactId>seqware</artifactId>
         <relativePath>../pom.xml</relativePath>
