--- a/seqware-ext-testing/pom.xml
+++ b/seqware-ext-testing/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <version>1.1.1-gsi-SNAPSHOT</version> 
+        <version>1.1.1-gsi-rc1</version> 
         <groupId>com.github.seqware</groupId>
         <artifactId>seqware</artifactId>
         <relativePath>../pom.xml</relativePath>
