Added "refresh" and "invalidate" operations to the sample and lane provenance endpoints

--- a/seqware-webservice/src/main/resources/log4j.properties
+++ b/seqware-webservice/src/main/resources/log4j.properties
@@ -29,4 +29,4 @@ log4j.logger.net.sf.ehcache=WARN
 #log4j.logger.org.hibernate.type=WARN
 # END log4j Logging configuration.
 
-#log4j.logger.net.sourceforge.seqware.webservice.resources.queries=INFO
+log4j.logger.net.sourceforge.seqware.webservice.resources.queries=INFO
