Analysis provenance resource filter support
- Initial support to filter by workflow, workflow run, file, and file
meta type
- Added suuport to refresh sample and lane provenance via Metadata to
help facilitate testing

--- a/seqware-webservice/pom.xml
+++ b/seqware-webservice/pom.xml
@@ -641,6 +641,26 @@
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
         </dependency>
+        <dependency>
+            <groupId>ca.on.oicr.gsi</groupId>
+            <artifactId>provenance-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.6.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.6.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.6.3</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <profiles>
