--- a/seqware-common/pom.xml
+++ b/seqware-common/pom.xml
@@ -492,5 +492,10 @@
             <artifactId>commons-collections</artifactId>
             <version>3.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.6.3</version>
+        </dependency>
     </dependencies>
 </project>
