--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
     <artifactId>seqware</artifactId>
     <packaging>pom</packaging>
     <groupId>com.github.seqware</groupId>
-    <version>1.1.1-gsi-rc2</version>
+    <version>1.1.1-gsi-rc3-SNAPSHOT</version>
 
     <repositories>
         <repository>
