--- a/seqware-admin-tools/pom.xml
+++ b/seqware-admin-tools/pom.xml
@@ -9,7 +9,7 @@
     <packaging>jar</packaging>
 
     <parent>
-        <version>1.1.1-gsi-rc2</version>
+        <version>1.1.1-gsi-rc3-SNAPSHOT</version>
         <groupId>com.github.seqware</groupId>
         <artifactId>seqware</artifactId>
         <relativePath>../pom.xml</relativePath>
