--- a/seqware-admin-webservice/pom.xml
+++ b/seqware-admin-webservice/pom.xml
@@ -14,7 +14,7 @@
     <parent>
         <groupId>com.github.seqware</groupId>
         <artifactId>seqware</artifactId>
-        <version>1.1.1-gsi-rc2</version>
+        <version>1.1.1-gsi-rc3-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
