--- a/seqware-common/pom.xml
+++ b/seqware-common/pom.xml
@@ -476,6 +476,8 @@
         <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
+            <version>2.9.3</version>
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>joda-time</groupId>
