--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
         <maven-release-plugin.version>2.3.2</maven-release-plugin.version>
         <maven-build-helper-plugin.version>1.9.1</maven-build-helper-plugin.version>
         <powermock.version>1.5.6</powermock.version>
-        <provenance.version>1.0-rc6</provenance.version>
+        <provenance.version>1.0</provenance.version>
 
         <skipITs>true</skipITs>
         <findbugs.version>3.0.0</findbugs.version>
