--- a/seqware-pipeline/pom.xml
+++ b/seqware-pipeline/pom.xml
@@ -11,7 +11,7 @@
     <parent>
         <groupId>com.github.seqware</groupId>
         <artifactId>seqware</artifactId>
-        <version>1.1.1-gsi-rc3</version>
+        <version>1.1.1-gsi</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
