--- a/seqware-webservice/pom.xml
+++ b/seqware-webservice/pom.xml
@@ -683,8 +683,8 @@
                         <configuration>
                             <contextFile>target/seqware-webservice-${project.version}/META-INF/context.xml</contextFile>
                             <useNaming>true</useNaming>
+                            <httpsPort>0</httpsPort>
                         </configuration>
-
                     </plugin>
                 </plugins>
             </build>
