Build seqware-ext-admin-testing, but do not run ITs
- seqware-ext has a dependency on seqware-ext-admin-testing

--- a/seqware-ext-admin-testing/pom.xml
+++ b/seqware-ext-admin-testing/pom.xml
@@ -75,6 +75,7 @@
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <skipExtAdminTests>true</skipExtAdminTests>
     </properties>
     
     <build>
@@ -109,6 +110,7 @@
                     <dbVendorName>postgresql</dbVendorName>
                     <libraries>${project.parent.basedir}/seqware-admin-webservice/target/lib/postgresql-${postgresql.version}.jar</libraries>
                     <goalPrefix>embedded-glassfish</goalPrefix>
+                    <skip>${skipExtAdminTests}</skip>
                 </configuration>
                 <executions>
                     <execution>
@@ -150,6 +152,7 @@
                     <systemPropertyVariables>
                         <cliPath>${project.parent.basedir}/seqware-pipeline/target/seqware</cliPath>
                     </systemPropertyVariables>
+                    <skip>${skipExtAdminTests}</skip>
                 </configuration>
                         
                 <executions>
