--- a/pom.xml
+++ b/pom.xml
@@ -200,7 +200,7 @@
         <module>seqware-archetypes/seqware-archetype-module</module>
         <module>seqware-distribution</module>
         <module>seqware-ext-testing</module>
-        <!--<module>seqware-ext-admin-testing</module>-->
+        <module>seqware-ext-admin-testing</module>
         <module>seqware-sanity-check</module>
         <module>seqware-admin-tools</module>
     </modules>
