--- a/seqware-archetypes/seqware-archetype-decider/pom.xml
+++ b/seqware-archetypes/seqware-archetype-decider/pom.xml
@@ -9,7 +9,7 @@
     <description>SeqWare Java Decider archetype</description>
 
     <parent> 
-        <version>1.1.2-gsi-SNAPSHOT</version> 
+        <version>1.1.2-gsi</version> 
         <groupId>com.github.seqware</groupId> 
         <artifactId>seqware</artifactId> 
 	<relativePath>../../pom.xml</relativePath>
