--- a/seqware-distribution/pom.xml
+++ b/seqware-distribution/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <version>1.1.2-gsi-SNAPSHOT</version>
+        <version>1.1.2-gsi</version>
         <groupId>com.github.seqware</groupId>
         <artifactId>seqware</artifactId>
         <relativePath>../pom.xml</relativePath>
